--- a/HTML/Product_Samuel.html
+++ b/HTML/Product_Samuel.html
@@ -15,7 +15,7 @@
         <div class="navigation-container" id="navigation-container">
             <a href="index.html" class="navigation-item">Startseite</a>
             <a href="Über uns.html" class="navigation-item">Über uns</a>
-            <a href="#" class="navigation-item">Produkte & Dienstleistungen</a>
+            <a href="Produkte & Dienstleistungen.html" class="navigation-item">Produkte & Dienstleistungen</a>
             <a href="Team.html" class="navigation-item">Team</a>
             <a href="Kontakt.html" class="navigation-item">Kontakt</a>
             <img style="margin-left: auto;" src="../Images/Logo.png">
@@ -63,8 +63,8 @@
                 <img class="footerlogo" src="../Images/Logo.png">
             </a>
         </div>
-        <div class="footertext"></div>
-            <p> &copy; 2022 Schuber, Inc. <br>
+        <div class="footertext">
+            <p> &copy; 2022 Schuber, Inc.</p> <br>
         </div>
         <div class="footer-container">
             <a href="privacy.html" class="footer-item">DATENSCHUTZRICHTLINIE</a>
