--- a/HTML/Produkte & Dienstleistungen.html
+++ b/HTML/Produkte & Dienstleistungen.html
@@ -1,146 +1,230 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="uft-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="../Styles/style.css">
-        <script src="../Scripts/script.js"></script>
-        <script src="../Scripts/fontA.js"></script>
-        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-        <title>Produkte & Dienstleistungen</title>
-        <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet'>
-    </head>
-    <body>
-        <div class="gototopcontainer">
-            <div class="gototopbtn" onclick="gototop()" id="gototopbtn"><i class="fa fa-arrow-up"></i></div>
-        </div>
+<head>
+    <meta charset="uft-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <div class="navigation-container" id="navigation-container">
-            <a href="index.html" class="navigation-item">Startseite</a>
-            <a href="Über uns.html" class="navigation-item">Über uns</a>
-            <a href="#" class="navigation-item">Produkte & Dienstleistungen</a>
-            <a href="Team.html" class="navigation-item">Team</a>
-            <a href="Kontakt.html" class="navigation-item">Kontakt</a>
-            <img style="margin-left: auto;" src="../Images/Logo.png">
-        </div>
-        <div class="text">
-            <h1>Herstellung & Design</h1>
-            <hr>
-            <p>Die Herstellung unserer Lampen erfolgt in unserer Lampenfabrik in Rümlang, ZH. Bei unseren Produkten können sie auf höchste Schweizer Qualität vertrauen! </p>
-            <br>
-            <p>Wir verwenden ausschliesslich Ressourcen aus Nachhaltigem Abbau welche wir zu fairen Konditionen einkaufen. Mit unseren internationalen Partnern verbindet uns eine langjährige Zusammenarbeit, welche von beiden Seiten geschätzt wird. </p>
-            <br>
-            <p>Unsere preisgekrönten Designer leben und arbeiten in diversen Städten verteilt um die ganze Welt. Aufgrund der verschiedenen kulturellen Eindrücke, welche jeder Einzelne ins Team bringt sind unsere Designs weltweit einzigartig! </p>
-            <br>
-            <h1>SmartSchuber&trade;</h1>
-            <hr>
-            <br>
-            <div class="smartcontainer">
+    <link rel="stylesheet" href="../Styles/style.css">
+    <script src="../Scripts/script.js"></script>
+    <script src="../Scripts/fontA.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <title>Produkte & Dienstleistungen</title>
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet'>
+</head>
+
+<body>
+    <div class="gototopcontainer">
+        <div class="gototopbtn" onclick="gototop()" id="gototopbtn"><i class="fa fa-arrow-up"></i></div>
+    </div>
+
+    <div class="navigation-container" id="navigation-container">
+        <a href="index.html" class="navigation-item">Startseite</a>
+        <a href="Über uns.html" class="navigation-item">Über uns</a>
+        <a href="#" class="navigation-item">Produkte & Dienstleistungen</a>
+        <a href="Team.html" class="navigation-item">Team</a>
+        <a href="Kontakt.html" class="navigation-item">Kontakt</a>
+        <img style="margin-left: auto;" src="../Images/Logo.png">
+    </div>
+    <div class="text">
+        <h1>Herstellung & Design</h1>
+        <hr>
+        <p>Die Herstellung unserer Lampen erfolgt in unserer Lampenfabrik in Rümlang, ZH. Bei unseren Produkten können
+            sie auf höchste Schweizer Qualität vertrauen! </p>
+        <br>
+        <p>Wir verwenden ausschliesslich Ressourcen aus Nachhaltigem Abbau welche wir zu fairen Konditionen einkaufen.
+            Mit unseren internationalen Partnern verbindet uns eine langjährige Zusammenarbeit, welche von beiden Seiten
+            geschätzt wird. </p>
+        <br>
+        <p>Unsere preisgekrönten Designer leben und arbeiten in diversen Städten verteilt um die ganze Welt. Aufgrund
+            der verschiedenen kulturellen Eindrücke, welche jeder Einzelne ins Team bringt sind unsere Designs weltweit
+            einzigartig! </p>
+        <br>
+        <h1>SmartSchuber&trade;</h1>
+        <hr>
+        <br>
+        <div class="smartcontainer">
+            <div>
                 <div>
-                    <div>
-                        <h1>Vorteile</h1>
-                    </div>
-                    <ul>
-                        <li>Steuerung per Smartphone</li>
-                        <li>Steuerung per Zeitschaltuhr</li>
-                        <li>Übersicht des Stromverbrauchs</li>
-                        <li>Einbrecherschutzfunktion</li>
-                    </ul>
+                    <h1>Vorteile</h1>
                 </div>
-                <div>
-                    <div>
-                        <h1>Anforderungen</h1>
-                    </div>
-                    <ul>
-                       <li>Aktive Internetverbindung via WLAN</li> 
-                       <li>Smartphone mit IOS oder Android</li>
-                    </ul>
-                </div>
+                <ul>
+                    <li>Steuerung per Smartphone</li>
+                    <li>Steuerung per Zeitschaltuhr</li>
+                    <li>Übersicht des Stromverbrauchs</li>
+                    <li>Einbrecherschutzfunktion</li>
+                </ul>
             </div>
-            <div class="products">
-                <h1>Unsere Produkte</h1>
-                <hr>
-                <h2>1. K&uuml;che</h2>
-                <div class="productcontainer2">
-                    <img src="../Images/Denovo.jpg" alt="Schuber Denovo">
-                    <div>
-                        <h1>Denovo</h1>
-                        <hr>
-                        <p>Preis: 549.-</p> 
-                        <br>
-                        <br>
-                        <p>Montage: Decke</p> 
-                        <br>
-                        <br>
-                        <p>SmartSchuber&trade;: Ja</p>  
-                    </div>
+            <div>
+                <div>
+                    <h1>Anforderungen</h1>
                 </div>
-                <div class="productcontainer2">
-                    <div>
-                        <h1>Pierre</h1>
-                        <hr>
-                        <p>Preis: 899.-</p> 
-                        <br>
-                        <br>
-                        <p>Montage: Decke</p> 
-                        <br>
-                        <br>
-                        <p>SmartSchuber&trade;: Ja</p>  
-                    </div>
-                    <img src="../Images/Pierre.jpg" alt="Schuber Denovo">
-                </div>
-                <div class="productcontainer2">
-                    <img src="../Images/Sven.jpg" alt="Schuber Denovo">
-                    <div>
-                        <h1>Sven</h1>
-                        <hr>
-                        <p>Preis: 399.-</p> 
-                        <br>
-                        <br>
-                        <p>Montage: Freistehend</p> 
-                        <br>
-                        <br>
-                        <p>SmartSchuber&trade;: Nein</p>  
-                    </div>
-                </div>
-                <h2>2. K&uuml;che</h2>
+                <ul>
+                    <li>Aktive Internetverbindung via WLAN</li>
+                    <li>Smartphone mit IOS oder Android</li>
+                </ul>
             </div>
         </div>
-           
-    </body>
-    <footer>
-        <div class="background-circle">
-            <a href="index.html">
-                <img class="footerlogo" src="../Images/Logo.png">
+        <div class="products">
+            <h1>Unsere Produkte</h1>
+            <hr>
+            <div class="productsub">
+                <h2>&#8544;. K&uuml;che</h2>
+            </div>
+            <div class="productcontainer2">
+                <img src="../Images/Denovo.jpg" alt="Schuber Denovo">
+                <div>
+                    <h1>Denovo</h1>
+                    <hr>
+                    <p>Preis: 549.-</p>
+                    <br>
+                    <br>
+                    <p>Montage: Decke</p>
+                    <br>
+                    <br>
+                    <p>SmartSchuber&trade;: Ja</p>
+                </div>
+            </div>
+            <div class="productcontainer2">
+                <div>
+                    <h1>Pierre</h1>
+                    <hr>
+                    <p>Preis: 899.-</p>
+                    <br>
+                    <br>
+                    <p>Montage: Decke</p>
+                    <br>
+                    <br>
+                    <p>SmartSchuber&trade;: Ja</p>
+                </div>
+                <img src="../Images/Pierre.jpg" alt="Schuber Pierre">
+            </div>
+            <div class="productcontainer2">
+                <img src="../Images/Sven.jpg" alt="Schuber Sven">
+                <div>
+                    <h1>Sven</h1>
+                    <hr>
+                    <p>Preis: 399.-</p>
+                    <br>
+                    <br>
+                    <p>Montage: Freistehend</p>
+                    <br>
+                    <br>
+                    <p>SmartSchuber&trade;: Nein</p>
+                </div>
+            </div>
+            <div class="productsub">
+                <h2>&#8545;. Schlafzimmer</h2>
+            </div>
+            <a class="productcontainer2" href="Product_Samuel.html" style="text-decoration: none; color: black;">
+                <div>
+                    <h1>Samuel</h1>
+                    <hr>
+                    <p>Preis: 499.-</p>
+                    <br>
+                    <br>
+                    <p>Montage: Freistehend</p>
+                    <br>
+                    <br>
+                    <p>SmartSchuber&trade;: Ja</p>
+                </div>
+                <img src="../Images/Samuel.jpg" alt="Schuber Samuel">
             </a>
+            <div class="productcontainer2">
+                <img src="../Images/Nathan.jpg" alt="Schuber Nathan">
+                <div>
+                    <h1>Nathan</h1>
+                    <hr>
+                    <p>Preis: 899.-</p>
+                    <br>
+                    <br>
+                    <p>Montage: Freistehend</p>
+                    <br>
+                    <br>
+                    <p>SmartSchuber&trade;: Ja</p>
+                </div>
+            </div>
+            <div class="productsub">
+                <h2>&#8546;. Wohnzimmer</h2>
+            </div>
+            <div class="productcontainer2">
+                <div>
+                    <h1>Jonny</h1>
+                    <hr>
+                    <p>Preis: 399.-</p>
+                    <br>
+                    <br>
+                    <p>Montage: Freistehend</p>
+                    <br>
+                    <br>
+                    <p>SmartSchuber&trade;: Ja</p>
+                </div>
+                <img src="../Images/Jonny.jpg" alt="Schuber Jonny">
+            </div>
+            <div class="productcontainer2">
+                <img src="../Images/Hutomo.jpg" alt="Schuber Hutomo">
+                <div>
+                    <h1>Hutomo</h1>
+                    <hr>
+                    <p>Preis: 1099.-</p>
+                    <br>
+                    <br>
+                    <p>Montage: Freistehend</p>
+                    <br>
+                    <br>
+                    <p>SmartSchuber&trade;: Ja</p>
+                </div>
+            </div>
+            <div class="productcontainer2">
+                <div>
+                    <h1>Felix</h1>
+                    <hr>
+                    <p>Preis: 999.-</p>
+                    <br>
+                    <br>
+                    <p>Montage: Decke</p>
+                    <br>
+                    <br>
+                    <p>SmartSchuber&trade;: Ja</p>
+                </div>
+                <img src="../Images/Felix.jpg" alt="Schuber Felix">
+            </div>
         </div>
-        <div class="footertext"></div>
-            <p> &copy; 2022 Schuber, Inc. <br>
-        </div>
-        <div class="footer-container">
-            <a href="privacy.html" class="footer-item">DATENSCHUTZRICHTLINIE</a>
-            <a href="#" class="footer-item">NUTZUNGSBEDINGUNGEN</a>
-            <a href="#" class="footer-item">COOKIE-RICHTLINIE</a>
-            <a href="#" class="footer-item">FIRMENINFORMATIONEN</a>
-        </div>
+    </div>
 
-        <div class="footer-container">
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="blank">
-                <ion-icon class="footer-item" name="logo-youtube"></ion-icon>    
-            </a>
-            <a href="https://twitter.com/rickastley" target="blank">
-                <ion-icon href="#" class="footer-item" name="logo-twitter"></ion-icon>
-            </a>
-            <a href="https://www.facebook.com/RickAstley" target="blank">
-                <ion-icon href="#" class="footer-item" name="logo-facebook"></ion-icon>
-            </a>
-            <a href="https://www.instagram.com/officialrickastley/" target="blank">
-                <ion-icon href="#" class="footer-item" name="logo-instagram"></ion-icon>
-            </a>
-            <a href="https://www.reddit.com/user/ReallyRickAstley/" target="blank">
-                <ion-icon href="#" class="footer-item" name="logo-reddit"></ion-icon>  
-            </a>
-        </div>
-    </footer>
+</body>
+<footer>
+    <div class="background-circle">
+        <a href="index.html">
+            <img class="footerlogo" src="../Images/Logo.png">
+        </a>
+    </div>
+    <div class="footertext">
+        <p> &copy; 2022 Schuber, Inc.</p> <br>
+    </div>
+    <div class="footer-container">
+        <a href="privacy.html" class="footer-item">DATENSCHUTZRICHTLINIE</a>
+        <a href="#" class="footer-item">NUTZUNGSBEDINGUNGEN</a>
+        <a href="#" class="footer-item">COOKIE-RICHTLINIE</a>
+        <a href="#" class="footer-item">FIRMENINFORMATIONEN</a>
+    </div>    
+    <div class="footer-container">
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="blank">
+            <ion-icon class="footer-item" name="logo-youtube"></ion-icon>
+        </a>
+        <a href="https://twitter.com/rickastley" target="blank">
+            <ion-icon href="#" class="footer-item" name="logo-twitter"></ion-icon>
+        </a>
+        <a href="https://www.facebook.com/RickAstley" target="blank">
+            <ion-icon href="#" class="footer-item" name="logo-facebook"></ion-icon>
+        </a>
+        <a href="https://www.instagram.com/officialrickastley/" target="blank">
+            <ion-icon href="#" class="footer-item" name="logo-instagram"></ion-icon>
+        </a>
+        <a href="https://www.reddit.com/user/ReallyRickAstley/" target="blank">
+            <ion-icon href="#" class="footer-item" name="logo-reddit"></ion-icon>
+        </a>
+    </div>
+</footer>
+
 </html>
