--- a/HTML/Team.html
+++ b/HTML/Team.html
@@ -132,17 +132,17 @@
                 <img class="footerlogo" src="../Images/Logo.png">
             </a>
         </div>
-        <div class="footertext"></div>
-        <p> &copy; 2022 Schuber, Inc. <br>
-            </div>
+        <div class="footertext">
+            <p> &copy; 2022 Schuber, Inc.</p> <br>
+        </div>
         <div class="footer-container">
             <a href="privacy.html" class="footer-item">DATENSCHUTZRICHTLINIE</a>
             <a href="#" class="footer-item">NUTZUNGSBEDINGUNGEN</a>
             <a href="#" class="footer-item">COOKIE-RICHTLINIE</a>
             <a href="#" class="footer-item">FIRMENINFORMATIONEN</a>
 
-        </div>    <div class="footer-container">
-
+        </div>    
+        <div class="footer-container">
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="blank">
                 <ion-icon class="footer-item" name="logo-youtube"></ion-icon>
             </a>
