--- a/HTML/index.html
+++ b/HTML/index.html
@@ -27,16 +27,14 @@
         </div>
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
-                <img class="swiper-slide" src="../Images/Denovo.jpg">
                 <img class="swiper-slide position-top" src="../Images/Nathan.jpg">
                 <img class="swiper-slide position-top" src="../Images/Hutomo.jpg">
                 <img class="swiper-slide" src="../Images/Denovo.jpg">
                 <img class="swiper-slide" src="../Images/Sven.jpg">
                 <img class="swiper-slide" src="../Images/Samuel.jpg">
                 <img class="swiper-slide" src="../Images/Pierre.jpg">
-                <img class="swiper-slide" src="../Images/Denovo.jpg">
+                <img class="swiper-slide" src="../Images/Felix.jpg">
                 <img class="swiper-slide jonny" src="../Images/Jonny.jpg">
-                <img class="swiper-slide" src="../Images/Denovo.jpg">
             </div>
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
@@ -102,8 +100,8 @@
                 <img class="footerlogo" src="../Images/Logo.png">
             </a>
         </div>
-        <div class="footertext"></div>
-            <p> &copy; 2022 Schuber, Inc. <br>
+        <div class="footertext">
+            <p> &copy; 2022 Schuber, Inc.</p> <br>
         </div>
         <div class="footer-container">
             <a href="privacy.html" class="footer-item">DATENSCHUTZRICHTLINIE</a>
