--- a/HTML/Cookies.html
+++ b/HTML/Cookies.html
@@ -31,8 +31,8 @@
                 <img class="footerlogo" src="../Images/Logo.png">
             </a>
         </div>
-        <div class="footertext"></div>
-            <p> &copy; 2022 Schuber, Inc. <br>
+        <div class="footertext">
+            <p> &copy; 2022 Schuber, Inc.</p> <br>
         </div>
         <div class="footer-container">
             <a href="privacy.html" class="footer-item">DATENSCHUTZRICHTLINIE</a>
